data/all_generated_tests/raw_wast_tests/call_indirect_StackCorruption_4034.wast
;; 3. **Excessive Operands on Stack**:    - Design a test where more arguments are on the stack than required by the function signature during `call_indirect`.    - Constraint Check: Check if the implementation correctly handles excessive arguments by maintaining stack integrity.    - Stack Corruption Relation: Excessive arguments might not be properly managed leading to stack overflow or leftover inconsistent values.

(assert_invalid
  (module
    (type (func (param i32)))
    (table 1 funcref)
    (elem (i32.const 0) $f)
    (func $f (param i32))
    (func $excessive-arguments 
      (call_indirect (type 0) (i32.const 0) (i32.const 42) (i32.const 7))
    )
  )
  "type mismatch"
)